// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`на форме редактирования после загрузки файла привяжет панораму к офферу 1`] = `
Array [
  "linkInteriorPanoramaToOffer",
  Object {
    "category": "cars",
    "offerId": "offer-id",
    "panoramaId": "panorama-id",
  },
]
`;

exports[`поллинг статуса при маунте начнется, если панорама находится в статусе PROCESSING 1`] = `
Array [
  "getInteriorPanorama",
  Object {
    "panoramaId": "panorama-id",
  },
]
`;

exports[`поллинг статуса при удачной загрузке файла начнется сразу после загрузки файла 1`] = `
Array [
  "getInteriorPanorama",
  Object {
    "panoramaId": "panorama-id",
  },
]
`;

exports[`при выборе файла покажет алерт если размер файла больше допустимого 1`] = `"Вы пытаетесь загрузить файл размером 101 Мб. Допустимый размер файла - до 100 Мб."`;

exports[`при выборе файла покажет алерт если тип файла не изображение 1`] = `"Вы пытаетесь загрузить файл некорректного типа. Допустимы только файлы изображений"`;

exports[`при выборе файла покажет алерт если файлов больше чем один 1`] = `"Вы пытаетесь загрузить больше, чем один файл. Пожалуйста, выберете только один"`;

exports[`при дропе файла покажет алерт если статус у блока не init 1`] = `"Чтобы добавить новую панораму, сначала удалите предыдущую"`;

exports[`при отвязке панорамы отправит метрику 1`] = `
Array [
  Array [
    "panoramas",
    "interior",
    "deletion",
    "remove-reason-mock",
    "panorama-id-mock",
  ],
]
`;

exports[`при отмене загрузки файла покажет сообщение о подтверждении 1`] = `
Array [
  "Вы действительно хотите прервать загрузку панорамы?",
]
`;
